<resources>

    <string name="app_name">SkiLift</string>

    <string name="giveARideBackButtonText">Back</string>
    <string name="giveARideSubmitButtonText">Submit</string>

    <string name="giveARideLeavingOnPromptText">Leaving On:</string>
    <string name="giveARidePickupTimePromptText">Pickup Time:</string>
    <string name="giveARideReturnDatePromptText">Return Date:</string>
    <string name="giveARideReturnTimePromptText">Return Time:</string>
    <string name="giveARideDestinationPromptText">Destination:</string>
    <string name="giveARidePassengersPromptText">Passengers:</string>
    <string name="giveARideCarLicensePromptText">License Plate:</string>
    <string name="giveARideCarModelPromptText">Car Model:</string>
    <string name="giveARideSkiRackPromptText">Ski Rack:</string>
    <string name="giveARideSpecialRequestsPromptText">Special Requests:</string>

    <string name="giveARideLeavingOnFieldText">12/25/2022</string>
    <string name="giveARidePickupTimeFieldText">6:00</string>
    <string name="giveARideReturnDateFieldText">12/28/2022</string>
    <string name="giveARideReturnTimeFieldText">18:00</string>
    <string name="giveARideDestinationFieldText">Sunday River</string>
    <string name="giveARidePassengersFieldText">4</string>
    <string name="giveARideCarLicenseFieldText">3M5 GG6</string>
    <string name="giveARideCarModelFieldText">Toyota Avalon</string>
    <string name="giveARideSkiRackFieldText">No</string>
    <string name="giveARideSpecialRequestsFieldText">Have Fun!</string>

    <string name="send_message">Send message</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="departureLocation">&lt;b>Leaving From: &lt;/b>%1$s</string>
    <string name="destination">&lt;b>Going To: &lt;/b>%1$s</string>
    <string name="departureDate">&lt;b>Departure: &lt;/b>%1$s</string>
    <string name="returnDate">&lt;b>Return: &lt;/b>%1$s</string>
    <string name="memberDate">&lt;b>Member Since: &lt;/b>%1$s</string>
    <string name="ridesCompleted">&lt;b>Rides Completed: &lt;/b>%1$s</string>
    <string name="skiType">&lt;b>Skier or Snowboarder: &lt;/b>%1$s</string>
    <string name="favoriteMountains">&lt;b>Favorite Mountains: &lt;/b>%1$s</string>
    <string name="funFact">&lt;b>Fun Fact: &lt;/b>%1$s</string>
    <string name="ride_confirmed">Ride Confirmed!</string>
    <string name="view_rides">View Rides</string>
    <string name="return_home">Return Home</string>

    <string name="with">&lt;b>With: &lt;/b>%1$s</string>
    <string name="confirmedDestination">&lt;b>Destination: &lt;/b>%1$s</string>
    <string name="pickupLocation">&lt;b>Pickup Location: &lt;/b>%1$s</string>
    <string name="car">&lt;b>Car Model: &lt;/b>%1$s</string>
    <string name="plate">&lt;b>License Plate: &lt;/b>%1$s</string>
    <string name="message_group">Message Group</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="ride_messages">Ride Messages</string>

</resources>