<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    tools:context = ".GiveRideActivity" >

    <LinearLayout
        android:id = "@+id/giveARidePrompts"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:orientation = "vertical" >

        <TextView
            android:id = "@+id/giveARideLeavingOnPrompt"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARideLeavingOnPromptText" />

        <TextView
            android:id = "@+id/giveARidePickupTimePrompt"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARidePickupTimePromptText" />

        <TextView
            android:id = "@+id/giveARideReturnDatePrompt"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARideReturnDatePromptText" />

        <TextView
            android:id = "@+id/giveARideReturnTimePrompt"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARideReturnTimePromptText" />

        <TextView
            android:id = "@+id/giveARideDestinationPrompt"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARideDestinationPromptText" />

        <TextView
            android:id = "@+id/giveARidePassengersPrompt"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARidePassengersPromptText" />

        <TextView
            android:id = "@+id/giveARideCarLicenseModelPrompt"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARideCarLicenseModelPromptText" />

        <TextView
            android:id = "@+id/giveARideSkiRackPrompt"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARideSkiRackPromptText" />

        <TextView
            android:id = "@+id/giveARideSpecialRequestsPrompt"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARideSpecialRequestsPromptText" />

    </LinearLayout>

    <LinearLayout
        android:id = "@+id/giveARideFields"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:orientation = "vertical" >

        <TextView
            android:id = "@+id/giveARideLeavingOnField"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARideLeavingOnFieldText" />

        <TextView
            android:id = "@+id/giveARidePickupTimeField"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARidePickupTimeFieldText" />

        <TextView
            android:id = "@+id/giveARideReturnDateField"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARideReturnDateFieldText" />

        <TextView
            android:id = "@+id/giveARideReturnTimeField"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARideReturnTimeFieldText" />

        <TextView
            android:id = "@+id/giveARideDestinationField"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARideDestinationFieldText" />

        <TextView
            android:id = "@+id/giveARidePassengersField"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARidePassengersFieldText" />

        <TextView
            android:id = "@+id/giveARideCarLicenseModelField"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARideCarLicenseModelFieldText" />

        <TextView
            android:id = "@+id/giveARideSkiRackField"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARideSkiRackFieldText" />

        <TextView
            android:id = "@+id/giveARideSpecialRequestsField"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/giveARideSpecialRequestsFieldText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>